# LabSPO1.5

./: CMakeLists.txt  README.md  command_api.c  command_api.h  mt.h  script.vbs  util.c  util.h
client/: client.c  cmd_parser.c  cmd_parser.h
server/: cmd_util.c  cmd_util.h  command_api.c  command_api.h  server.c  storage.c  storage.h
server/methodApi/: methodApi.c  methodApi.h
